--- a/package.json
+++ b/package.json
@@ -10,9 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@tailwindcss/typography": "^0.5.16",
+    "aos": "^2.3.4",
+    "copyright-update": "^1.19.0",
+    "formik": "^2.4.6",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
+    "react-icons": "^5.4.0",
+    "react-pro-sidebar": "^1.1.0",
+    "react-router-dom": "^7.1.3",
+    "react-slick": "^0.30.3",
+    "react-social-icons": "^6.20.0",
+    "react-spinners": "^0.15.0",
+    "slick-carousel": "^1.8.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
